--- a/app/views/media_objects/_metadata_display.html.erb
+++ b/app/views/media_objects/_metadata_display.html.erb
@@ -25,7 +25,7 @@ Unless required by applicable law or agreed to in writing, software distributed
 </div>
     
 <dl id="creation_metadata">
-  <%= display_metadata('Creator', @mediaobject.creator, 'Not provided') %>
+  <%= display_name_metadata(gather_all_names(@mediaobject))%>
   <%= display_metadata('Date', combined_display_date(@mediaobject), 'Not provided') %>
   <% unless @mediaobject.abstract.blank? %>
   <dt>Summary</dt>
@@ -33,7 +33,6 @@ Unless required by applicable law or agreed to in writing, software distributed
     <pre><%= @mediaobject.abstract %></pre>
   </dd>
   <% end %>
-  <%= display_metadata('Personal Names', display_other_name(@mediaobject)) %>
   <%= display_metadata('Publisher', @mediaobject.publisher) %>
   <%= display_metadata('Genre', @mediaobject.genre) %>
   <%= display_metadata('Subject', @mediaobject.subject) %>
